syntax = "proto3";

package auth;

service Auth {
  rpc Login (LoginReq) returns (stream LoginRes) {}
  rpc GetUserFromToken (AccessToken) returns (stream User) {}
}

message LoginReq {
  string email = 1;
  string password = 2;
  string type = 3;
}

message LoginRes {
  User user = 1;
  Credentials credentials = 2;
}

message User {
  int32 id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string verified = 6;
}

message Credentials {
  Credential accessToken = 1;
  Credential refreshToken = 2;
}

message Credential {
  string value = 1;
  int32 expires = 2;
}

message AccessToken {
  string token = 1;
}
